# hello-rsocket

./: .gitignore  README.md  check_out_all.sh  protocol.md  settings.gradle
doc/: hello-rsocket.graffle
golang/: README  README.md  go.mod  main.go
golang/common/: RedisClient.go  protocol.go
golang/requester/: client.go  fire-and-forget.go  request-channel.go  request-response.go  request-stream.go  request.go
golang/responder/: acceptor.go  rsocket-acceptor.go  server.go
interaction-model/: build.gradle
interaction-model/src/main/java/io/rsocket/example/transfer/: TcpFireForgetExample.java  WebsocketFireForgetExample.java
interaction-model/src/main/resources/: logback.xml
java/: README.md  build.gradle
java/pojo/: pom.xml
java/pojo/src/test/resources/: log4j2.xml
java/requester/: pom.xml
java/responder/: pom.xml
java/resumability/: build.gradle
java/rpc/src/main/java/io/rsocket/example/rpc/: Client.java
java/spring-boot-requester/: build.gradle
java/spring-boot-responder/: build.gradle
java0/rpc/: build.gradle
java0/spring-boot-requester/: build.gradle
java0/spring-boot-responder/: build.gradle
load-balancing/: build.gradle
rpc/: .classpath  build.gradle
rpc/src/main/proto/: service.proto
rust/: Cargo.toml  README.md
rust/src/: client.md  lib.rs  main.rs  server.md
rust/src/common/: mod.rs
rust/src/requester/: client.rs  fire_and_forget.rs  mod.rs  request_channel.rs  request_response.rs  request_stream.rs  rsocket_requester.rs
rust/src/responder/: mod.rs  rsocket_acceptor.rs  server.rs
rust/tests/: tests.rs
(+29 files in other folders)
