[package]
name = "hello-rsocket"
version = "0.1.0"
authors = ["feuyeux <feuyeux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsocket_rust = { git = "https://github.com/rsocket/rsocket-rust", branch = "master" }
bytes = "~0.4.*"
futures = "~0.1.*"
tokio = "~0.1.*"